svg code added in lec2

--- a/html/lec2media.html
+++ b/html/lec2media.html
@@ -10,10 +10,21 @@
             <source src="notification_sound.mp3" type="audio/mp3">
         </audio>
 
+
+        <h1>
+            below is my vector logo                
+        </h1>
+        <svg width="140" height="140" viewBox="0 0 140 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="140" height="140" fill="#83FB87"/>
+            <rect width="140" height="140" fill="black" fill-opacity="0.2"/>
+            </svg>
+
+            
         <h2>below is the video</h2>
         <video controls>
             <source src="demovideo.mp4" type="video/mp4">
         </video>
+
 
     </body>
 </html>
